--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <div class="card">
+  <main class="card">
     <img class="card-image" src="./images/image-qr-code.png" alt="QR-Code">
     <h2 class="card-title">Improve your front-end skills by building projects</h2>
     <p class="card-text">Scan the QR code to visit Frontend Mentor and take your codings skills to the next level</p>
-  </div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/LuckyChimp">LuckyChimp</a>.
-  </div>
+  </footer>
 </body>
 </html>
